--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -79,7 +83,9 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.lowercase_repo_name }}:${{ steps.docker_tag.outputs.tag }}
         platforms: linux/amd64, linux/arm64
-    
+        no-cache: true # Optionally disable cache to rule out caching issues
+        # Add more detailed logging
+        set-output: true
     - name: Build and push the Docker image version
       uses: docker/build-push-action@v2
       with:
@@ -88,6 +94,9 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.lowercase_repo_name }}:${{ steps.versioning.outputs.new_version }}
         platforms: linux/amd64, linux/arm64
+        no-cache: true # Optionally disable cache to rule out caching issues
+        # Add more detailed logging
+        set-output: true
 
     - name: Commit VERSION file change
       run: |
