--- a/NLog.config
+++ b/NLog.config
@@ -13,7 +13,7 @@
 		<target name="loki" xsi:type="loki"
 				batchSize="200"
 				taskDelayMilliseconds="500"
-				endpoint="${environment:LokiEndpoint}"
+				endpoint="http://localhost:3100"
 				username=""
 				password=""
 				orderWrites="true"
@@ -22,7 +22,7 @@
 				method:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}}|
 				source=${logger}" >
 			<label name="app" layout="monitoring" />
-			<label name="server" layout="${hostname:lowercase=true}" />
+			<label name="server" layout="${environment:GrafanaHostname}" />
 		</target>
 	</targets>
 
