--- a/VaultInitializer.csproj
+++ b/VaultInitializer.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="VaultSharp" Version="1.13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
