--- a/NLog.config
+++ b/NLog.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
@@ -13,7 +13,7 @@
 		<target name="loki" xsi:type="loki"
 				batchSize="200"
 				taskDelayMilliseconds="500"
-				endpoint="http://localhost:3100"
+				endpoint="${environment:LokiEndpoint}"
 				username=""
 				password=""
 				orderWrites="true"
@@ -29,7 +29,7 @@
 	<rules>
 		<logger name="*" minlevel="Debug" writeTo="logfile" />
 		<logger name="*" minlevel="Info" writeTo="logconsole" />
-
+		
 		<logger name="*" minlevel="Info" writeTo="loki" />
 		<!-- Add more rules if necessary -->
 	</rules>
